fix `filedescriptor out of range in select() error when running `syft_flwr.run` and then `!uv run {str(FLWR_PROJECT_PATH / "main.py")} --active` (the flower server code) in the same notebook

--- a/notebooks/RDS-Demo/do1.ipynb
+++ b/notebooks/RDS-Demo/do1.ipynb
@@ -32,9 +32,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from utils import reset_db\n",
+    "from pathlib import Path\n",
     "\n",
-    "reset_db(\"flwr\")"
+    "from syft_rds.orchestra import remove_rds_stack_dir, setup_rds_server\n",
+    "\n",
+    "remove_rds_stack_dir(root_dir=Path(\".\"), key=\"flwr\")"
    ]
   },
   {
@@ -43,9 +45,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from syft_rds.orchestra import setup_rds_server\n",
-    "\n",
-    "do_stack_1 = setup_rds_server(email=\"do1@openmined.org\", key=\"flwr\")"
+    "do_stack_1 = setup_rds_server(email=\"do1@openmined.org\", root_dir=Path(\".\"), key=\"flwr\")"
    ]
   },
   {
@@ -299,7 +299,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
