--- a/notebooks/RDS-Demo/do2.ipynb
+++ b/notebooks/RDS-Demo/do2.ipynb
@@ -41,7 +41,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "do_stack_2 = setup_rds_server(email=\"do2@openmined.org\", key=\"flwr\")"
+    "from pathlib import Path\n",
+    "\n",
+    "do_stack_2 = setup_rds_server(email=\"do2@openmined.org\", root_dir=Path(\".\"), key=\"flwr\")"
    ]
   },
   {
@@ -287,7 +289,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
