--- a/notebooks/RDS-Demo-tabular/ds-demo.ipynb
+++ b/notebooks/RDS-Demo-tabular/ds-demo.ipynb
@@ -1,19 +1,12 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!uv pip install \"torch==2.5.1\" \"torchvision==0.20.1\""
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 1: Create Flower Project"
+    "## Step 1: Create Flower Project\n",
+    "\n",
+    "We will use an example project from flower called [fl-tabular](https://github.com/adap/flower/tree/main/examples/fl-tabular) which trains a simple neural network with 2 linear layers on a tabular dataset (\"Adult Census Income\")"
    ]
   },
   {
@@ -22,9 +15,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!flwr new quickstart-pytorch \\\n",
-    "    --framework PyTorch \\\n",
-    "    --username syft_flwr"
+    "FLWR_PROJECT = \"fl-tabular-demo\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!git clone --depth=1 https://github.com/adap/flower.git && mv flower/examples/fl-tabular {FLWR_PROJECT} && rm -rf flower"
    ]
   },
   {
@@ -40,7 +40,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!flwr run quickstart-pytorch/"
+    "!uv pip install \"torch==2.5.1\" \"scikit-learn==1.6.1\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!flwr run {FLWR_PROJECT}"
    ]
   },
   {
@@ -66,7 +75,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We modify the `quickstart-pytorch` example\n",
+    "We modify the `fl-tabular` example\n",
     "- To load data from SyftBox\n",
     "- To save model weights after training\n",
     "\n",
@@ -77,8 +86,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Step 1.3 Re-Run Simulation\n",
-    "Let's check that customizing the Flower code does not break `flwr run`"
+    "### Step 1.3 Bootstrap the `flwr` project to turn it into a `syft_flwr` project"
    ]
   },
   {
@@ -87,7 +95,55 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!flwr run quickstart-pytorch"
+    "from pathlib import Path\n",
+    "\n",
+    "from syft_core import Client\n",
+    "\n",
+    "FLWR_PROJECT_PATH = Path(FLWR_PROJECT)\n",
+    "\n",
+    "DO1 = \"flower-test-group-1@openmined.org\"\n",
+    "DO2 = \"flower-test-group-2@openmined.org\"\n",
+    "DS = Client.load().email\n",
+    "print(f\"DS: {DS}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "    import syft_flwr\n",
+    "\n",
+    "    syft_flwr.bootstrap(FLWR_PROJECT_PATH, aggregator=DS, datasites=[DO1, DO2])\n",
+    "    print(f\"Bootstrapped flwr project at {FLWR_PROJECT_PATH} successfully ✅\")\n",
+    "except Exception as e:\n",
+    "    print(e)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Step 1.4 Re-Run Simulation\n",
+    "We want to check that all our changes do not break the `flwr` project"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!flwr run fl-tabular-demo/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*We will have the `syft_flwr run` soon (in a PR, ready to be merged) to check if the bootstrapped project work over `syft_rpc` locally*"
    ]
   },
   {
@@ -103,34 +159,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pathlib import Path\n",
+    "import syft_rds as sy\n",
     "\n",
-    "from syft_rds.orchestra import setup_rds_server\n",
-    "\n",
-    "ds_stack = setup_rds_server(email=\"ds@openmined.org\", key=\"flwr\", root_dir=Path(\".\"))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "DO1 = \"do1@openmined.org\"\n",
-    "DO2 = \"do2@openmined.org\"\n",
-    "DS = \"ds@openmined.org\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "do_client_1 = ds_stack.init_session(host=DO1)\n",
+    "do_client_1 = sy.init_session(host=DO1)\n",
     "print(\"Logged into: \", do_client_1.host)\n",
     "\n",
-    "do_client_2 = ds_stack.init_session(host=DO2)\n",
+    "do_client_2 = sy.init_session(host=DO2)\n",
     "print(\"Logged into: \", do_client_2.host)"
    ]
   },
@@ -140,7 +174,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert not do_client_1.is_admin"
+    "do_client_1.is_admin"
    ]
   },
   {
@@ -149,7 +183,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert not do_client_2.is_admin"
+    "do_client_2.is_admin"
    ]
   },
   {
@@ -165,14 +199,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "from pathlib import Path\n",
-    "\n",
-    "FLWR_PROJECT = \"quickstart-pytorch\"\n",
-    "SYFTBOX_DATASET_NAME = \"cifar10\"\n",
-    "\n",
-    "\n",
-    "FLWR_PROJECT_PATH = Path(f\"{FLWR_PROJECT}\")"
+    "SYFTBOX_DATASET_NAME = \"adult_census_income\""
    ]
   },
   {
@@ -199,63 +226,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 4: Bootstrap Project"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "FLWR_PROJECT_PATH"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import syft_flwr\n",
-    "\n",
-    "try:\n",
-    "    syft_flwr.bootstrap(FLWR_PROJECT_PATH, aggregator=DS, datasites=[DO1, DO2])\n",
-    "    print(\"Bootstrapped project successfully ✅\")\n",
-    "except Exception as e:\n",
-    "    print(e)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "You will see that there are 2 changes that `syft_flwr.bootstrap` does\n",
-    "-  A `main.py` file created under the `quickstart-pytorch` project\n",
-    "- There is a new field named `[tool.syft_flwr]` appended to the `quickstart-pytorch` project's `pyproject.toml` that specifies who are the data owners (datasites) / data scientist (aggregator)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Run simulated `syft_flwr` code to see if things run well"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "syft_flwr.run(FLWR_PROJECT_PATH, [dataset1.get_mock_path(), dataset2.get_mock_path()])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Step 5: DS Submits Jobs"
+    "## Step 4: DS Submits Jobs"
    ]
   },
   {
@@ -281,8 +252,8 @@
     "\n",
     "for client in datasites:\n",
     "    job = client.jobs.submit(\n",
-    "        name=\"Syft Flower Pytorch Experiment\",\n",
-    "        description=\"Syft Flower Federated Learning Experiment\",\n",
+    "        name=\"Syft Flower FL-Tabular Experiment\",\n",
+    "        description=\"Syft Flower Federated Learning Experiment on Tabular Data\",\n",
     "        user_code_path=FLWR_PROJECT_PATH,\n",
     "        dataset_name=SYFTBOX_DATASET_NAME,\n",
     "        tags=[\"federated\", \"learning\", \"syft\", \"flwr\"],\n",
@@ -323,26 +294,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "FLWR_PROJECT_PATH"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "str(ds_stack.client.config_path)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "os.environ[\"SYFTBOX_CLIENT_CONFIG_PATH\"] = str(ds_stack.client.config_path)\n",
-    "os.environ[\"LOGURU_LEVEL\"] = \"DEBUG\"\n",
     "!uv run {str(FLWR_PROJECT_PATH / \"main.py\")} --active"
    ]
   },
