--- a/notebooks/RDS-Demo/ds.ipynb
+++ b/notebooks/RDS-Demo/ds.ipynb
@@ -22,6 +22,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import flwr\n",
+    "\n",
+    "print(f\"Using flwr version {flwr.__version__}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "!flwr new quickstart-pytorch \\\n",
     "    --framework PyTorch \\\n",
     "    --username syft_flwr"
@@ -171,7 +182,6 @@
     "FLWR_PROJECT = \"quickstart-pytorch\"\n",
     "SYFTBOX_DATASET_NAME = \"cifar10\"\n",
     "\n",
-    "\n",
     "FLWR_PROJECT_PATH = Path(f\"{FLWR_PROJECT}\")"
    ]
   },
@@ -223,7 +233,7 @@
     "    syft_flwr.bootstrap(FLWR_PROJECT_PATH, aggregator=DS, datasites=[DO1, DO2])\n",
     "    print(\"Bootstrapped project successfully ✅\")\n",
     "except Exception as e:\n",
-    "    print(e)"
+    "    print(f\"Bootstrapped project failed with error: '{e}' ❌\")"
    ]
   },
   {
