--- a/notebooks/RDS-Demo/do2.ipynb
+++ b/notebooks/RDS-Demo/do2.ipynb
@@ -32,16 +32,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from syft_rds.orchestra import setup_rds_server"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "from pathlib import Path\n",
+    "\n",
+    "from syft_rds.orchestra import setup_rds_server\n",
     "\n",
     "do_stack_2 = setup_rds_server(email=\"do2@openmined.org\", root_dir=Path(\".\"), key=\"flwr\")"
    ]
