--- a/notebooks/RDS-Demo/ds.ipynb
+++ b/notebooks/RDS-Demo/ds.ipynb
@@ -105,7 +105,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 2: Setup RDS Server"
+    "## Step 2: Setup RDS Server\n",
+    "\n",
+    "Connecting remotely to the DOs' datasites"
    ]
   },
   {
@@ -249,7 +251,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Run simulated `syft_flwr` code to see if things run well"
+    "## Step 5: Run simulated `syft_flwr` code to see if things run well locally\n",
+    "This will run everything locally on DS's machine just to check if the code can run smoothly over mock data."
    ]
   },
   {
@@ -265,7 +268,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 5: DS Submits Jobs"
+    "## Step 6: DS Submits Jobs"
    ]
   },
   {
@@ -324,7 +327,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 6: DS starts Aggregator"
+    "## Step 7: DS starts Aggregator"
    ]
   },
   {
