download partitioned datasets from huggingface

--- a/examples/fl-diabetes-prediction/do.ipynb
+++ b/examples/fl-diabetes-prediction/do.ipynb
@@ -5,11 +5,7 @@
    "metadata": {},
    "source": [
     "## Prerequisites\n",
-    "Create a virtual env with jupyter to run this notebook\n",
-    "```bash\n",
-    "uv venv\n",
-    "uv pip install jupyter\n",
-    "```"
+    "Please make sure to have the prerequisites installed (follow `README.md`)"
    ]
   },
   {
@@ -81,9 +77,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from huggingface_hub import snapshot_download\n",
+    "\n",
+    "snapshot_download(\n",
+    "    repo_id=\"khoaguin/pima-indians-diabetes-database-partitions\",\n",
+    "    repo_type=\"dataset\",\n",
+    "    local_dir=\"./dataset/\",\n",
+    "    local_dir_use_symlinks=False,  # Set to False to copy files instead of symlinking\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from pathlib import Path\n",
     "\n",
-    "partition_number = 0  # please change this to any number from 0 to 4\n",
+    "partition_number = 3  # please change this to any number from 0 to 4\n",
     "DATASET_PATH = Path(f\"./dataset/pima-indians-diabetes-database-{partition_number}\")\n",
     "\n",
     "dataset = client.dataset.create(\n",
