move fl-diabetes-prediction to notebooks/

--- a/notebooks/Demo-FL-Diabetes-Prediction/do.ipynb
+++ b/notebooks/Demo-FL-Diabetes-Prediction/do.ipynb
@@ -21,7 +21,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!uv pip install \"flwr[simulation]==1.17.0\" \"flwr-datasets>=0.5.0\" \"torch==2.7.0\" \"syft_flwr==0.1.0\" imblearn pandas \"scikit-learn==1.6.1\" loguru"
+    "!uv pip install \\\n",
+    "    \"flwr[simulation]==1.17.0\" \"flwr-datasets>=0.5.0\" \\\n",
+    "    \"scikit-learn==1.6.1\" \"torch==2.7.0\" \\\n",
+    "    \"syft_flwr==0.1.0\" \\\n",
+    "    imblearn pandas loguru"
    ]
   },
   {
