--- a/notebooks/Demo-FL-Diabetes-Prediction/ds.ipynb
+++ b/notebooks/Demo-FL-Diabetes-Prediction/ds.ipynb
@@ -12,6 +12,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Dependencies for this demo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!uv pip install \\\n",
+    "    \"flwr[simulation]==1.17.0\" \"flwr-datasets>=0.5.0\" \\\n",
+    "    \"scikit-learn==1.6.1\" \"torch==2.7.0\" \\\n",
+    "    \"syft_flwr==0.1.0\" \\\n",
+    "    imblearn pandas loguru"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Some paths and constants "
    ]
   },
@@ -49,8 +69,8 @@
     "DS = Client.load().email\n",
     "print(\"DS email: \", DS)\n",
     "\n",
-    "DO1 = \"do1@openmined.org\"\n",
-    "DO2 = \"do2@openmined.org\"\n",
+    "DO1 = \"dknguyen.work@gmail.com\"\n",
+    "DO2 = \"dkn.work@protonmail.com\"\n",
     "\n",
     "do_client_1 = sy.init_session(host=DO1)\n",
     "print(\"Logged into: \", do_client_1.host)\n",
@@ -79,7 +99,7 @@
     "for client in do_clients:\n",
     "    dataset = client.dataset.get(name=SYFTBOX_DATASET_NAME)\n",
     "    mock_paths.append(dataset.get_mock_path())\n",
-    "    print(dataset)"
+    "    print(f\"Client {client.host}'s dataset: \\n{dataset}\\n\")"
    ]
   },
   {
@@ -135,6 +155,7 @@
    "outputs": [],
    "source": [
     "if RUN_SIMULATION:\n",
+    "    print(f\"running syft_flwr simulation with mock paths: {mock_paths}\")\n",
     "    syft_flwr.run(SYFT_FLWR_PROJECT_PATH, mock_paths)"
    ]
   },
@@ -153,7 +174,8 @@
    "source": [
     "# clean up before submitting jobs\n",
     "!rm -rf {SYFT_FLWR_PROJECT_PATH / \"fl_diabetes_prediction\" / \"__pycache__\"}\n",
-    "!rm -rf {SYFT_FLWR_PROJECT_PATH / \"simulation_logs\"}"
+    "!rm -rf {SYFT_FLWR_PROJECT_PATH / \"simulation_logs\"}\n",
+    "!rm -rf weights/"
    ]
   },
   {
@@ -179,15 +201,6 @@
    "metadata": {},
    "source": [
     "## DS starts the FL server code"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!rm -rf weights/"
    ]
   },
   {
