add images to notebooks

--- a/notebooks/Demo-FL-Diabetes-Prediction/do.ipynb
+++ b/notebooks/Demo-FL-Diabetes-Prediction/do.ipynb
@@ -150,6 +150,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"./images/doSendModels.png\" width=\"80%\" alt=\"DS Sends Models\">"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
