--- a/notebooks/Demo-FL-Diabetes-Prediction/ds.ipynb
+++ b/notebooks/Demo-FL-Diabetes-Prediction/ds.ipynb
@@ -83,10 +83,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "do_client_1.is_admin"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Explore the datasets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SYFTBOX_DATASET_NAME"
    ]
   },
   {
@@ -107,6 +125,15 @@
    "metadata": {},
    "source": [
     "## Bootstrapping and run `syft_flwr` simulation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SYFT_FLWR_PROJECT_PATH"
    ]
   },
   {
@@ -154,6 +181,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "mock_paths"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "if RUN_SIMULATION:\n",
     "    print(f\"running syft_flwr simulation with mock paths: {mock_paths}\")\n",
     "    syft_flwr.run(SYFT_FLWR_PROJECT_PATH, mock_paths)"
@@ -164,6 +200,13 @@
    "metadata": {},
    "source": [
     "## Submit jobs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"./images/dsSendsJobs.png\" width=\"80%\" alt=\"DS Submits Jobs\">"
    ]
   },
   {
@@ -185,6 +228,7 @@
    "outputs": [],
    "source": [
     "for client in do_clients:\n",
+    "    print(f\"sending job to {client.host}\")\n",
     "    job = client.jobs.submit(\n",
     "        name=\"Syft Flower Experiment\",\n",
     "        description=\"Syft Flower Federated Learning Experiment\",\n",
@@ -201,6 +245,13 @@
    "metadata": {},
    "source": [
     "## DS starts the FL server code"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"./images/dsAggregateModels.png\" width=\"30%\" alt=\"DS Aggregates Models\">"
    ]
   },
   {
