--- a/notebooks/Demo-FL-Diabetes-Prediction/do.ipynb
+++ b/notebooks/Demo-FL-Diabetes-Prediction/do.ipynb
@@ -5,7 +5,29 @@
    "metadata": {},
    "source": [
     "## Prerequisites\n",
-    "Please make sure to have the prerequisites installed (follow `README.md`)"
+    "\n",
+    "### SyftBox client\n",
+    "Make sure you have syftbox client running in a terminal\n",
+    "1. Install `syftbox`: `curl -fsSL https://syftboxdev.openmined.org/install.sh | sh`\n",
+    "2. If you are a first-time user, enter `n` (no) when it prompts `Start the client now? [y/n]` and follow step 3 and 4, otherwise say `yes` and ignore step 3 and 4\n",
+    "3. Run `syftbox init` and follow the instructions to authenticate with OTP\n",
+    "4. Run `syftbox`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Python Environment with Jupyter\n",
+    "\n",
+    "Please make sure to have a virtual python environment with `jupyter` installed to run this notebook, e.g. run the below commands in a terminal\n",
+    "```bash\n",
+    "uv venv\n",
+    "source .venv/bin/activate\n",
+    "uv pip install jupyter\n",
+    "```\n",
+    "\n",
+    "Configure the notebook to run with the Python kernel from the installed environment, or run `uv run jupyter-lab` "
    ]
   },
   {
