small fixes to notebooks

--- a/notebooks/RDS-Demo/do1.ipynb
+++ b/notebooks/RDS-Demo/do1.ipynb
@@ -111,9 +111,10 @@
    "source": [
     "from utils import save_dataset_to_disk\n",
     "\n",
-    "save_dataset_to_disk(\n",
-    "    dataset_name=SYFTBOX_DATASET_NAME, dataset_dir=DATASET_DIR, num_partitions=2\n",
-    ")"
+    "if not (Path.cwd() / \"datasets\").exists():\n",
+    "    save_dataset_to_disk(\n",
+    "        dataset_name=SYFTBOX_DATASET_NAME, dataset_dir=DATASET_DIR, num_partitions=2\n",
+    "    )"
    ]
   },
   {
@@ -204,6 +205,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "jobs = do_client_1.jobs.get_all()\n",
+    "jobs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "jobs = do_client_1.jobs.get_all(status=\"pending_code_review\")\n",
     "jobs"
    ]
@@ -214,7 +225,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "job = jobs[-1]\n",
+    "job = jobs[0]\n",
     "job"
    ]
   },
@@ -245,6 +256,15 @@
    "metadata": {},
    "source": [
     "![Demo Slides-images-9.jpg](attachment:81e3160a-a8e0-492a-bd6b-924949549352.jpg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "do_stack_1.client.config_path.resolve()"
    ]
   },
   {
