--- a/notebooks/RDS-Demo/do2.ipynb
+++ b/notebooks/RDS-Demo/do2.ipynb
@@ -93,9 +93,10 @@
    "source": [
     "from utils import save_dataset_to_disk\n",
     "\n",
-    "save_dataset_to_disk(\n",
-    "    dataset_name=SYFTBOX_DATASET_NAME, dataset_dir=DATASET_DIR, num_partitions=2\n",
-    ")"
+    "if not (Path.cwd() / \"datasets\").exists():\n",
+    "    save_dataset_to_disk(\n",
+    "        dataset_name=SYFTBOX_DATASET_NAME, dataset_dir=DATASET_DIR, num_partitions=2\n",
+    "    )"
    ]
   },
   {
@@ -186,6 +187,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "do_client_2.jobs.get_all()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "jobs = do_client_2.jobs.get_all(status=\"pending_code_review\")\n",
     "\n",
     "jobs"
@@ -197,7 +207,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "job = jobs[-1]\n",
+    "job = jobs[0]\n",
     "job"
    ]
   },
