--- a/notebooks/RDS-Demo/ds.ipynb
+++ b/notebooks/RDS-Demo/ds.ipynb
@@ -13,7 +13,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!uv pip install \"torch==2.5.1\" \"torchvision==0.20.1\""
+    "!uv pip install \"torch==2.7.0\" \"torchvision\""
    ]
   },
   {
@@ -59,7 +59,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!flwr run quickstart-pytorch/"
+    "RUN_SIMULATION = 0\n",
+    "\n",
+    "if RUN_SIMULATION:\n",
+    "    !flwr run quickstart-pytorch/"
    ]
   },
   {
@@ -94,7 +97,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!flwr run quickstart-pytorch"
+    "if RUN_SIMULATION:\n",
+    "    !flwr run quickstart-pytorch"
    ]
   },
   {
@@ -116,18 +120,11 @@
     "\n",
     "from syft_rds.orchestra import setup_rds_server\n",
     "\n",
-    "ds_stack = setup_rds_server(email=\"ds@openmined.org\", key=\"flwr\", root_dir=Path(\".\"))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "DS = \"ds@openmined.org\"\n",
     "DO1 = \"do1@openmined.org\"\n",
     "DO2 = \"do2@openmined.org\"\n",
-    "DS = \"ds@openmined.org\""
+    "\n",
+    "ds_stack = setup_rds_server(email=DS, key=\"flwr\", root_dir=Path(\".\"))"
    ]
   },
   {
@@ -257,7 +254,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "syft_flwr.run(FLWR_PROJECT_PATH, [dataset1.get_mock_path(), dataset2.get_mock_path()])"
+    "if RUN_SIMULATION:\n",
+    "    syft_flwr.run(\n",
+    "        FLWR_PROJECT_PATH, [dataset1.get_mock_path(), dataset2.get_mock_path()]\n",
+    "    )"
    ]
   },
   {
@@ -285,19 +285,44 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Job submission\n",
-    "datasites = [do_client_1, do_client_2]\n",
-    "\n",
-    "for client in datasites:\n",
-    "    job = client.jobs.submit(\n",
-    "        name=\"Syft Flower Pytorch Experiment\",\n",
-    "        description=\"Syft Flower Federated Learning Experiment\",\n",
-    "        user_code_path=FLWR_PROJECT_PATH,\n",
-    "        dataset_name=SYFTBOX_DATASET_NAME,\n",
-    "        tags=[\"federated\", \"learning\", \"syft\", \"flwr\"],\n",
-    "        entrypoint=\"main.py\",\n",
-    "    )\n",
-    "    print(job)"
+    "# clean up before submitting jobs\n",
+    "!rm -rf {FLWR_PROJECT_PATH / \"quickstart_pytorch\" / \"__pycache__\"}\n",
+    "!rm -rf {FLWR_PROJECT_PATH / \"simulation_logs\"}\n",
+    "!rm -rf weights/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "job1 = do_client_1.jobs.submit(\n",
+    "    name=\"Syft Flower Pytorch Experiment\",\n",
+    "    description=\"Syft Flower Federated Learning Experiment\",\n",
+    "    user_code_path=FLWR_PROJECT_PATH,\n",
+    "    dataset_name=SYFTBOX_DATASET_NAME,\n",
+    "    tags=[\"federated\", \"learning\", \"syft\", \"flwr\"],\n",
+    "    entrypoint=\"main.py\",\n",
+    ")\n",
+    "job1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "job2 = do_client_2.jobs.submit(\n",
+    "    name=\"Syft Flower Pytorch Experiment\",\n",
+    "    description=\"Syft Flower Federated Learning Experiment\",\n",
+    "    user_code_path=FLWR_PROJECT_PATH,\n",
+    "    dataset_name=SYFTBOX_DATASET_NAME,\n",
+    "    tags=[\"federated\", \"learning\", \"syft\", \"flwr\"],\n",
+    "    entrypoint=\"main.py\",\n",
+    ")\n",
+    "job2"
    ]
   },
   {
