update ds notebook

--- a/notebooks/RDS-Demo/ds.ipynb
+++ b/notebooks/RDS-Demo/ds.ipynb
@@ -225,6 +225,7 @@
     "import syft_flwr\n",
     "\n",
     "try:\n",
+    "    !rm -rf {FLWR_PROJECT_PATH / \"main.py\"}\n",
     "    syft_flwr.bootstrap(FLWR_PROJECT_PATH, aggregator=DS, datasites=[DO1, DO2])\n",
     "    print(\"Bootstrapped project successfully ✅\")\n",
     "except Exception as e:\n",
