--- a/notebooks/Demo-FL-Diabetes-Prediction/ds.ipynb
+++ b/notebooks/Demo-FL-Diabetes-Prediction/ds.ipynb
@@ -91,8 +91,8 @@
     "DS = Client.load().email\n",
     "print(\"DS email: \", DS)\n",
     "\n",
-    "DO1 = \"dknguyen.work@gmail.com\"\n",
-    "DO2 = \"dkn.work@protonmail.com\"\n",
+    "DO1 = \"flower-test-group-1@openmined.org\"\n",
+    "DO2 = \"flower-test-group-2@openmined.org\"\n",
     "\n",
     "do_client_1 = sy.init_session(host=DO1)\n",
     "print(\"Logged into: \", do_client_1.host)\n",
@@ -102,15 +102,6 @@
     "\n",
     "do_clients = [do_client_1, do_client_2]\n",
     "do_emails = [DO1, DO2]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "do_client_1.is_admin"
    ]
   },
   {
@@ -166,7 +157,12 @@
    "source": [
     "import syft_flwr\n",
     "\n",
-    "syft_flwr.bootstrap(SYFT_FLWR_PROJECT_PATH, aggregator=DS, datasites=do_emails)"
+    "try:\n",
+    "    !rm -rf {SYFT_FLWR_PROJECT_PATH / \"main.py\"}\n",
+    "    syft_flwr.bootstrap(SYFT_FLWR_PROJECT_PATH, aggregator=DS, datasites=do_emails)\n",
+    "    print(\"Bootstrapped project successfully ✅\")\n",
+    "except Exception as e:\n",
+    "    print(e)"
    ]
   },
   {
@@ -182,6 +178,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "RUN_SIMULATION = True\n",
+    "\n",
     "if RUN_SIMULATION:\n",
     "    !flwr run {SYFT_FLWR_PROJECT_PATH}"
    ]
@@ -285,6 +283,8 @@
     "import os\n",
     "\n",
     "os.environ[\"LOGURU_LEVEL\"] = \"DEBUG\"\n",
+    "os.environ[\"SYFT_FLWR_MSG_TIMEOUT\"] = \"60\"\n",
+    "\n",
     "!uv run {str(SYFT_FLWR_PROJECT_PATH / \"main.py\")} --active"
    ]
   },
