--- a/notebooks/Demo-FL-CNN-Cifar10-InMemory/do1.ipynb
+++ b/notebooks/Demo-FL-CNN-Cifar10-InMemory/do1.ipynb
@@ -34,8 +34,18 @@
    "source": [
     "from pathlib import Path\n",
     "\n",
+    "import syft_rds\n",
     "from syft_rds.orchestra import remove_rds_stack_dir, setup_rds_server\n",
     "\n",
+    "print(syft_rds.__version__)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "remove_rds_stack_dir(root_dir=Path(\".\"), key=\"flwr\")"
    ]
   },
