fed analytics quickstart

--- a/notebooks/federated-analytics-quickstart/ds.ipynb
+++ b/notebooks/federated-analytics-quickstart/ds.ipynb
@@ -22,16 +22,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "from pathlib import Path\n",
-    "\n",
-    "SYFT_FLWR_PROJECT_DIR = Path(\"./quickstart-pandas\")\n",
-    "\n",
-    "assert SYFT_FLWR_PROJECT_DIR.exists()"
+    "## Log into DOs' datasites"
    ]
   },
   {
@@ -48,7 +42,39 @@
     "DO1 = \"do1@openmined.org\"\n",
     "DO2 = \"do2@openmined.org\"\n",
     "\n",
-    "ds_stack = setup_rds_server(email=DS, key=\"flwr\", root_dir=Path(\".\"))"
+    "ds_stack = setup_rds_server(email=DS, key=\"flwr\", root_dir=Path(\".\"))\n",
+    "\n",
+    "do_client_1 = ds_stack.init_session(host=DO1)\n",
+    "print(\"Logged into: \", do_client_1.host)\n",
+    "\n",
+    "do_client_2 = ds_stack.init_session(host=DO2)\n",
+    "print(\"Logged into: \", do_client_2.host)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Prepare Code to Submit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pathlib import Path\n",
+    "\n",
+    "SYFT_FLWR_PROJECT_DIR = Path(\"./quickstart-pandas\")\n",
+    "assert SYFT_FLWR_PROJECT_DIR.exists()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Run `flwr` simulation"
    ]
   },
   {
@@ -64,16 +90,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "do_client_1 = ds_stack.init_session(host=DO1)\n",
-    "print(\"Logged into: \", do_client_1.host)\n",
-    "\n",
-    "do_client_2 = ds_stack.init_session(host=DO2)\n",
-    "print(\"Logged into: \", do_client_2.host)"
+    "### Inspect DOs' Mock Datasets"
    ]
   },
   {
@@ -101,6 +121,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Bootstrapping the `flwr` project\n",
+    "\n",
+    "After modifying the client code (according to [`README.md`](./README.md)), DS runs `syft_flwr.boostrap` to turn a `flwr` project into a `syft_flwr` project"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -117,6 +146,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### DS runs `syft_flwr` simulation"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -126,6 +162,13 @@
     "    syft_flwr.run(\n",
     "        SYFT_FLWR_PROJECT_DIR, [dataset1.get_mock_path(), dataset2.get_mock_path()]\n",
     "    )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## DS submits jobs to DOs"
    ]
   },
   {
@@ -144,7 +187,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Job submission\n",
+    "# Jobs submission\n",
     "datasites = [do_client_1, do_client_2]\n",
     "\n",
     "for client in datasites:\n",
@@ -157,6 +200,13 @@
     "        entrypoint=\"main.py\",\n",
     "    )\n",
     "    print(job)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## DS runs FL server code"
    ]
   },
   {
