--- a/notebooks/federated-analytics-quickstart/do1.ipynb
+++ b/notebooks/federated-analytics-quickstart/do1.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Data Owner"
+    "# Data Owner\n",
+    "\n",
+    "## Upload dataset"
    ]
   },
   {
@@ -33,11 +35,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pathlib import Path\n",
-    "\n",
-    "from syft_rds.orchestra import setup_rds_server\n",
-    "\n",
-    "DO_EMAIL = \"do2@openmined.org\"\n",
+    "from syft_rds.orchestra import remove_rds_stack_dir, setup_rds_server"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "remove_rds_stack_dir(root_dir=Path(\".\"), key=\"flwr\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DO_EMAIL = \"do1@openmined.org\"\n",
     "\n",
     "do_stack = setup_rds_server(email=DO_EMAIL, root_dir=Path(\".\"), key=\"flwr\")"
    ]
@@ -77,7 +93,7 @@
    "source": [
     "FLWR_PROJECT = \"quickstart-pandas\"\n",
     "SYFTBOX_DATASET_NAME = \"iris\"\n",
-    "PARTITION_ID = 2\n",
+    "PARTITION_ID = 1\n",
     "\n",
     "DATASET_DIR = Path(\"./dataset/\").expanduser().absolute()\n",
     "FLWR_PROJECT_PATH = Path(f\"{FLWR_PROJECT}\")\n",
