--- a/notebooks/federated-analytics-diabetes/ds.ipynb
+++ b/notebooks/federated-analytics-diabetes/ds.ipynb
@@ -22,18 +22,35 @@
    "source": [
     "from pathlib import Path\n",
     "\n",
-    "from syft_rds.orchestra import setup_rds_server\n",
+    "from syft_core import Client\n",
     "\n",
-    "DS = \"ds@openmined.org\"\n",
-    "DO1 = \"do1@openmined.org\"\n",
-    "DO2 = \"do2@openmined.org\"\n",
+    "DO1 = \"flower-test-group-1@openmined.org\"\n",
+    "DO2 = \"flower-test-group-2@openmined.org\"\n",
+    "DS = Client.load().email\n",
+    "DS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "LOCAL_TEST = False\n",
     "\n",
-    "ds_stack = setup_rds_server(email=DS, key=\"flwr\", root_dir=Path(\".\"))\n",
+    "if LOCAL_TEST:\n",
+    "    from syft_rds.orchestra import setup_rds_server\n",
     "\n",
-    "do_client_1 = ds_stack.init_session(host=DO1)\n",
+    "    ds_stack = setup_rds_server(email=DS, key=\"flwr\", root_dir=Path(\".\"))\n",
+    "    do_client_1 = ds_stack.init_session(host=DO1)\n",
+    "    do_client_2 = ds_stack.init_session(host=DO2)\n",
+    "else:\n",
+    "    import syft_rds as sy\n",
+    "\n",
+    "    do_client_1 = sy.init_session(host=DO1)\n",
+    "    do_client_2 = sy.init_session(host=DO2)\n",
+    "\n",
     "print(\"Logged into: \", do_client_1.host)\n",
-    "\n",
-    "do_client_2 = ds_stack.init_session(host=DO2)\n",
     "print(\"Logged into: \", do_client_2.host)"
    ]
   },
@@ -74,7 +91,7 @@
     "\n",
     "For each client:\n",
     "1. Concat the dataframes in `train.csv` and `mock.csv`\n",
-    "2. "
+    "2. Calculating key statistical moments (count, sum, mean) and frequency distributions (histograms) for important features ('Glucose', 'BMI', 'Age'). Also visualize the historgrams"
    ]
   },
   {
@@ -89,7 +106,10 @@
     "df1_test = pd.read_csv(dataset1.get_mock_path() / \"test.csv\")\n",
     "\n",
     "df2_train = pd.read_csv(dataset2.get_mock_path() / \"train.csv\")\n",
-    "df2_test = pd.read_csv(dataset2.get_mock_path() / \"test.csv\")"
+    "df2_test = pd.read_csv(dataset2.get_mock_path() / \"test.csv\")\n",
+    "\n",
+    "df = pd.concat([df1_train, df1_test, df2_train, df2_test], ignore_index=True)\n",
+    "df.info()"
    ]
   },
   {
@@ -98,8 +118,111 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pima = pd.concat([df1_train, df1_test, df2_train, df2_test], ignore_index=True)\n",
-    "pima.head(11)"
+    "from pathlib import Path\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import seaborn as sns\n",
+    "from loguru import logger\n",
+    "\n",
+    "\n",
+    "# --- Plotting Function (adapted to take feature-specific metrics) ---\n",
+    "def plot_feature_histogram_from_metrics_plt(\n",
+    "    feature_name: str, metrics_dict: dict, feature_bins_config: dict\n",
+    "):\n",
+    "    \"\"\"Plots a combined histogram for a single feature using plt.bar.\"\"\"\n",
+    "    print(f\"\\nPlotting histogram for: {feature_name} using plt.bar\")\n",
+    "    sns.set_theme(style=\"whitegrid\")  # Apply Seaborn style\n",
+    "\n",
+    "    hist_outcome0 = metrics_dict.get(f\"{feature_name}_hist_outcome0\")\n",
+    "    count_outcome0 = metrics_dict.get(f\"{feature_name}_count_outcome0\", 0)\n",
+    "    hist_outcome1 = metrics_dict.get(f\"{feature_name}_hist_outcome1\")\n",
+    "    count_outcome1 = metrics_dict.get(f\"{feature_name}_count_outcome1\", 0)\n",
+    "    bin_edges = feature_bins_config.get(feature_name)\n",
+    "\n",
+    "    if bin_edges is None:\n",
+    "        print(\n",
+    "            f\"Error: Bin edges not defined for feature '{feature_name}'. Cannot plot.\"\n",
+    "        )\n",
+    "        return\n",
+    "\n",
+    "    # Ensure bin_edges is a numpy array for np.diff\n",
+    "    if not isinstance(bin_edges, np.ndarray):\n",
+    "        bin_edges = np.array(bin_edges)\n",
+    "\n",
+    "    bin_widths = np.diff(bin_edges)\n",
+    "\n",
+    "    plt.figure(figsize=(10, 6))\n",
+    "    has_plotted_anything = False\n",
+    "\n",
+    "    # Plot outcome 0\n",
+    "    if hist_outcome0 is not None and count_outcome0 > 0:\n",
+    "        frequencies0 = np.array(hist_outcome0)\n",
+    "        if len(frequencies0) == len(bin_edges) - 1:\n",
+    "            plt.bar(\n",
+    "                bin_edges[:-1],\n",
+    "                frequencies0,\n",
+    "                width=bin_widths,\n",
+    "                align=\"edge\",\n",
+    "                alpha=0.6,\n",
+    "                label=\"No Diabetes (0)\",\n",
+    "                color=\"skyblue\",\n",
+    "            )\n",
+    "            has_plotted_anything = True\n",
+    "        else:\n",
+    "            print(\n",
+    "                f\"Warning: Mismatch for {feature_name} Outcome 0. Frequencies length {len(frequencies0)}, Expected bins {len(bin_edges)-1}.\"\n",
+    "            )\n",
+    "\n",
+    "    # Plot outcome 1\n",
+    "    if hist_outcome1 is not None and count_outcome1 > 0:\n",
+    "        frequencies1 = np.array(hist_outcome1)\n",
+    "        if len(frequencies1) == len(bin_edges) - 1:\n",
+    "            plt.bar(\n",
+    "                bin_edges[:-1],\n",
+    "                frequencies1,\n",
+    "                width=bin_widths,\n",
+    "                align=\"edge\",\n",
+    "                alpha=0.6,\n",
+    "                label=\"Diabetes (1)\",\n",
+    "                color=\"salmon\",\n",
+    "            )\n",
+    "            has_plotted_anything = True\n",
+    "        else:\n",
+    "            print(\n",
+    "                f\"Warning: Mismatch for {feature_name} Outcome 1. Frequencies length {len(frequencies1)}, Expected bins {len(bin_edges)-1}.\"\n",
+    "            )\n",
+    "\n",
+    "    if not has_plotted_anything:\n",
+    "        print(f\"Info: No valid histogram data to plot for feature '{feature_name}'.\")\n",
+    "        plt.close()  # Close the empty figure\n",
+    "        return\n",
+    "\n",
+    "    plt.title(f\"Local Histogram: {feature_name}\")\n",
+    "    plt.xlabel(feature_name)\n",
+    "    plt.ylabel(\"Local Frequency\")\n",
+    "    plt.xticks(bin_edges, rotation=45, ha=\"right\")\n",
+    "    plt.legend(title=\"Diabetes Status\")\n",
+    "    plt.grid(axis=\"y\", linestyle=\"--\")\n",
+    "    plt.tight_layout()\n",
+    "\n",
+    "    # Save plots\n",
+    "    save_dir = Path(\"./mock_figures\")\n",
+    "    if not save_dir.exists():\n",
+    "        save_dir.mkdir(parents=True, exist_ok=True)  # Using pathlib.Path.mkdir\n",
+    "        print(f\"Created directory: {save_dir}\")\n",
+    "\n",
+    "    # Save the plot\n",
+    "    file_path = save_dir / f\"{feature_name}_histogram.png\"  # Using pathlib operator\n",
+    "    try:\n",
+    "        plt.savefig(file_path)\n",
+    "        print(f\"Plot saved to {file_path}\")\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error saving plot for {feature_name}: {e}\")\n",
+    "\n",
+    "    plt.show()\n",
+    "    plt.close()"
    ]
   },
   {
@@ -108,101 +231,79 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pima_col_idx = pima.columns\n",
-    "pima_col_idx"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pima.dtypes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Create Nutritional status column\n",
+    "KEY_DIABETES_FEATURES = [\"Glucose\", \"BMI\", \"Age\"]\n",
+    "DIABETES_OUTCOME_COLUMN = \"y\"\n",
+    "FEATURE_BINS = {\n",
+    "    \"Glucose\": np.linspace(40, 250, 11),  # 10 bins from 40 to 250\n",
+    "    \"BMI\": np.linspace(15, 60, 10),  # 9 bins from 15 to 60\n",
+    "    \"Age\": np.linspace(20, 90, 15),  # 14 bins from 20 to 90\n",
+    "}\n",
     "\n",
-    "Nutritional_status = pd.Series([])\n",
+    "# Ensure Glucose, BMI, Age are numeric and handle potential issues if necessary\n",
+    "df[\"Glucose\"] = pd.to_numeric(df[\"Glucose\"], errors=\"coerce\")\n",
+    "df[\"BMI\"] = pd.to_numeric(df[\"BMI\"], errors=\"coerce\")\n",
+    "df[\"Age\"] = pd.to_numeric(df[\"Age\"], errors=\"coerce\")\n",
     "\n",
-    "for i in range(len(pima)):\n",
-    "    if pima[\"BMI\"][i] == 0.0:\n",
-    "        Nutritional_status[i] = \"NA\"\n",
+    "metrics = {}\n",
     "\n",
-    "    elif pima[\"BMI\"][i] < 18.5:\n",
-    "        Nutritional_status[i] = \"Underweight\"\n",
+    "for feature_name in KEY_DIABETES_FEATURES:\n",
+    "    logger.info(f\"Calculating metrics for feature: {feature_name}\")\n",
     "\n",
-    "    elif pima[\"BMI\"][i] < 25:\n",
-    "        Nutritional_status[i] = \"Normal\"\n",
+    "    if feature_name not in df.columns:\n",
+    "        logger.warning(f\"Feature '{feature_name}' not found in DataFrame. Skipping.\")\n",
+    "        continue\n",
     "\n",
-    "    elif pima[\"BMI\"][i] >= 25 and pima[\"BMI\"][i] < 30:\n",
-    "        Nutritional_status[i] = \"Overweight\"\n",
+    "    current_bin_edges = FEATURE_BINS[feature_name]\n",
     "\n",
-    "    elif pima[\"BMI\"][i] >= 30:\n",
-    "        Nutritional_status[i] = \"Obese\"\n",
+    "    # Metrics for y=0\n",
+    "    subset_no_diabetes = df[df[DIABETES_OUTCOME_COLUMN] == 0]\n",
+    "    feature_data_outcome0 = subset_no_diabetes[feature_name].dropna()\n",
     "\n",
+    "    if not feature_data_outcome0.empty:\n",
+    "        freqs_0, _ = np.histogram(feature_data_outcome0, bins=current_bin_edges)\n",
+    "        metrics[f\"{feature_name}_hist_outcome0\"] = freqs_0.tolist()\n",
+    "        metrics[f\"{feature_name}_mean_outcome0\"] = feature_data_outcome0.mean()\n",
+    "        metrics[f\"{feature_name}_sum_outcome0\"] = feature_data_outcome0.sum()\n",
+    "        metrics[f\"{feature_name}_count_outcome0\"] = len(feature_data_outcome0)\n",
+    "    else:  # Handle case where feature_data_outcome0 is empty\n",
+    "        metrics[f\"{feature_name}_hist_outcome0\"] = [0] * (len(current_bin_edges) - 1)\n",
+    "        metrics[f\"{feature_name}_mean_outcome0\"] = np.nan\n",
+    "        metrics[f\"{feature_name}_sum_outcome0\"] = np.nan\n",
+    "        metrics[f\"{feature_name}_count_outcome0\"] = 0\n",
+    "\n",
+    "    # Metrics for y=1\n",
+    "    subset_diabetes = df[df[DIABETES_OUTCOME_COLUMN] == 1]\n",
+    "    feature_data_outcome1 = subset_diabetes[feature_name].dropna()\n",
+    "\n",
+    "    if not feature_data_outcome1.empty:\n",
+    "        freqs_1, _ = np.histogram(feature_data_outcome1, bins=current_bin_edges)\n",
+    "        metrics[f\"{feature_name}_hist_outcome1\"] = freqs_1.tolist()\n",
+    "        metrics[f\"{feature_name}_mean_outcome1\"] = feature_data_outcome1.mean()\n",
+    "        metrics[f\"{feature_name}_sum_outcome1\"] = feature_data_outcome1.sum()\n",
+    "        metrics[f\"{feature_name}_count_outcome1\"] = len(feature_data_outcome1)\n",
+    "    else:  # Handle case where feature_data_outcome1 is empty\n",
+    "        metrics[f\"{feature_name}_hist_outcome1\"] = [0] * (len(current_bin_edges) - 1)\n",
+    "        metrics[f\"{feature_name}_mean_outcome1\"] = np.nan\n",
+    "        metrics[f\"{feature_name}_sum_outcome1\"] = np.nan\n",
+    "        metrics[f\"{feature_name}_count_outcome1\"] = 0\n",
+    "\n",
+    "    plot_feature_histogram_from_metrics_plt(\n",
+    "        feature_name=feature_name,\n",
+    "        metrics_dict=metrics,  # Use the metrics from image or calculation\n",
+    "        feature_bins_config=FEATURE_BINS,\n",
+    "    )\n",
+    "\n",
+    "logger.info(\"--- Calculated Metrics ---\")\n",
+    "# This will print the 'metrics' dictionary like in your example\n",
+    "for k, v in metrics.items():\n",
+    "    if isinstance(v, list) and len(v) > 5:\n",
+    "        logger.info(f\"  {k}: {str(v)[:30]}... (length {len(v)})\")\n",
+    "    elif isinstance(v, (np.float64, float)):\n",
+    "        logger.info(f\"  {k}: {v:.2f}\")\n",
     "    else:\n",
-    "        Nutritional_status[i] = pima[\"BMI\"][i]"
+    "        logger.info(f\"  {k}: {v}\")\n",
+    "logger.info(\"------------------------\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pima.insert(6, \"Nutritional Status\", Nutritional_status)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pima[\"Nutritional Status\"].value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -272,6 +373,9 @@
     "\n",
     "try:\n",
     "    !rm -rf {SYFT_FLWR_PROJECT_DIR / \"main.py\"}\n",
+    "    !rm -rf {SYFT_FLWR_PROJECT_DIR / \"**/__pycache__/\"}\n",
+    "    !rm -rf {SYFT_FLWR_PROJECT_DIR / \"simulation_logs\"}\n",
+    "    !rm -rf figures/\n",
     "    syft_flwr.bootstrap(SYFT_FLWR_PROJECT_DIR, aggregator=DS, datasites=[DO1, DO2])\n",
     "    print(\"Bootstrapped project successfully ✅\")\n",
     "except Exception as e:\n",
@@ -310,8 +414,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!rm -rf {SYFT_FLWR_PROJECT_DIR / \"pandas_example\" / \"__pycache__/\"}\n",
-    "!rm -rf {SYFT_FLWR_PROJECT_DIR / \"simulation_logs\"}"
+    "!rm -rf {SYFT_FLWR_PROJECT_DIR / \"**/__pycache__/\"}\n",
+    "!rm -rf {SYFT_FLWR_PROJECT_DIR / \"simulation_logs\"}\n",
+    "!rm -rf figures/"
    ]
   },
   {
@@ -350,8 +455,11 @@
    "source": [
     "import os\n",
     "\n",
-    "os.environ[\"SYFTBOX_CLIENT_CONFIG_PATH\"] = str(ds_stack.client.config_path)\n",
+    "if LOCAL_TEST:\n",
+    "    os.environ[\"SYFTBOX_CLIENT_CONFIG_PATH\"] = str(ds_stack.client.config_path)\n",
+    "\n",
     "os.environ[\"LOGURU_LEVEL\"] = \"DEBUG\"\n",
+    "os.environ[\"SYFT_FLWR_MSG_TIMEOUT\"] = \"60\"\n",
     "\n",
     "!uv run {str(SYFT_FLWR_PROJECT_DIR / \"main.py\")} --active"
    ]
