update do notebooks

--- a/notebooks/federated-analytics-diabetes/do2.ipynb
+++ b/notebooks/federated-analytics-diabetes/do2.ipynb
@@ -36,19 +36,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from syft_rds.orchestra import setup_rds_server\n",
-    "\n",
+    "LOCAL_TEST = False\n",
     "DO_EMAIL = \"do2@openmined.org\"\n",
-    "do_stack = setup_rds_server(email=DO_EMAIL, root_dir=Path(\".\"), key=\"flwr\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "do_client = do_stack.init_session(host=DO_EMAIL)"
+    "\n",
+    "if LOCAL_TEST:\n",
+    "    from syft_rds.orchestra import remove_rds_stack_dir, setup_rds_server\n",
+    "\n",
+    "    remove_rds_stack_dir(root_dir=Path(\".\"), key=\"flwr\")\n",
+    "    do_stack = setup_rds_server(email=DO_EMAIL, root_dir=Path(\".\"), key=\"flwr\")\n",
+    "    do_client = do_stack.init_session(host=DO_EMAIL)\n",
+    "else:\n",
+    "    import syft_rds as sy\n",
+    "\n",
+    "    do_client = sy.init_session(host=DO_EMAIL)"
    ]
   },
   {
@@ -142,7 +142,8 @@
    "source": [
     "import os\n",
     "\n",
-    "os.environ[\"SYFTBOX_CLIENT_CONFIG_PATH\"] = str(do_stack.client.config_path)\n",
+    "if LOCAL_TEST:\n",
+    "    os.environ[\"SYFTBOX_CLIENT_CONFIG_PATH\"] = str(do_stack.client.config_path)\n",
     "\n",
     "do_client.run_private(jobs[0])"
    ]
