update example README and notebooks

--- a/notebooks/fl-diabetes-prediction/ds.ipynb
+++ b/notebooks/fl-diabetes-prediction/ds.ipynb
@@ -4,37 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Prerequisites\n",
-    "\n",
-    "### SyftBox client\n",
-    "Make sure you have syftbox client running in a terminal\n",
-    "1. Install `syftbox`: `curl -fsSL https://syftboxdev.openmined.org/install.sh | sh`\n",
-    "2. If you are a first-time user, enter `n` (no) when it prompts `Start the client now? [y/n]` and follow step 3 and 4, otherwise say `yes` and ignore step 3 and 4\n",
-    "3. Run `syftbox init` and follow the instructions to authenticate with OTP\n",
-    "4. Run `syftbox`"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Python Environment with Jupyter\n",
-    "\n",
-    "Please make sure to have a virtual python environment with `jupyter` installed to run this notebook, e.g. run the below commands in a terminal\n",
-    "```bash\n",
-    "uv venv\n",
-    "source .venv/bin/activate\n",
-    "uv pip install jupyter\n",
-    "```\n",
-    "\n",
-    "Configure the notebook to run with the Python kernel from the installed environment, or run `uv run jupyter-lab` "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Install dependencies for this demo"
+    "## Install dependencies "
    ]
   },
   {
@@ -46,7 +16,7 @@
     "!uv pip install \\\n",
     "    \"flwr[simulation]==1.17.0\" \"flwr-datasets>=0.5.0\" \\\n",
     "    \"scikit-learn==1.6.1\" \"torch==2.7.0\" \\\n",
-    "    \"syft_flwr==0.1.1\" \\\n",
+    "    \"syft_flwr==0.1.2\" \\\n",
     "    imblearn pandas loguru"
    ]
   },
@@ -54,7 +24,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Some paths and constants "
+    "## Some paths and constants "
    ]
   },
   {
