--- a/notebooks/federated-analytics-diabetes/ds.ipynb
+++ b/notebooks/federated-analytics-diabetes/ds.ipynb
@@ -20,7 +20,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!uv pip install numpy pandas matplotlib"
+    "!uv pip install syft_flwr numpy pandas matplotlib seaborn"
    ]
   },
   {
