--- a/notebooks/federated-analytics-diabetes/ds.ipynb
+++ b/notebooks/federated-analytics-diabetes/ds.ipynb
@@ -365,8 +365,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "RUN_SIMULATION = 1\n",
-    "\n",
+    "RUN_SIMULATION = True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "if RUN_SIMULATION:\n",
     "    !flwr run {SYFT_FLWR_PROJECT_DIR}"
    ]
