update fed analytics notebooks for local runs

--- a/notebooks/federated-analytics-diabetes/do1.ipynb
+++ b/notebooks/federated-analytics-diabetes/do1.ipynb
@@ -4,6 +4,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Install Dependencies"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!uv pip install syft_flwr numpy pandas matplotlib seaborn"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Data Owner\n",
     "\n",
     "## Upload dataset"
@@ -35,8 +51,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "LOCAL_TEST = False\n",
-    "DO_EMAIL = \"do1@openmined.org\"\n",
+    "LOCAL_TEST = True\n",
+    "DO_EMAIL = \"flower-test-group-1@openmined.org\"\n",
     "\n",
     "if LOCAL_TEST:\n",
     "    from syft_rds.orchestra import remove_rds_stack_dir, setup_rds_server\n",
