--- a/notebooks/federated-analytics-diabetes/ds.ipynb
+++ b/notebooks/federated-analytics-diabetes/ds.ipynb
@@ -52,7 +52,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "LOCAL_TEST = False\n",
+    "LOCAL_TEST = True\n",
     "\n",
     "if LOCAL_TEST:\n",
     "    from syft_rds.orchestra import setup_rds_server\n",
