--- a/notebooks/federated-analytics-diabetes/do2.ipynb
+++ b/notebooks/federated-analytics-diabetes/do2.ipynb
@@ -36,13 +36,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "LOCAL_TEST = False\n",
-    "DO_EMAIL = \"do2@openmined.org\"\n",
+    "LOCAL_TEST = True\n",
+    "DO_EMAIL = \"flower-test-group-2@openmined.org\"\n",
     "\n",
     "if LOCAL_TEST:\n",
-    "    from syft_rds.orchestra import remove_rds_stack_dir, setup_rds_server\n",
+    "    from syft_rds.orchestra import setup_rds_server\n",
     "\n",
-    "    remove_rds_stack_dir(root_dir=Path(\".\"), key=\"flwr\")\n",
     "    do_stack = setup_rds_server(email=DO_EMAIL, root_dir=Path(\".\"), key=\"flwr\")\n",
     "    do_client = do_stack.init_session(host=DO_EMAIL)\n",
     "else:\n",
