local test for diabetes federated analytics notebooks

--- a/notebooks/federated-analytics-diabetes/do1.ipynb
+++ b/notebooks/federated-analytics-diabetes/do1.ipynb
@@ -4,7 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Install Dependencies"
+    "# Data Owner 01"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Install Dependencies"
    ]
   },
   {
@@ -13,14 +20,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!uv pip install syft_flwr numpy pandas matplotlib seaborn"
+    "!uv pip install syft_flwr numpy pandas matplotlib seaborn --upgrade"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Data Owner\n",
+    "Change `LOCAL_TEST` to True if you want to run the clients locally to test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "LOCAL_TEST = True"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "## Upload dataset"
    ]
@@ -51,7 +73,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "LOCAL_TEST = True\n",
     "DO_EMAIL = \"flower-test-group-1@openmined.org\"\n",
     "\n",
     "if LOCAL_TEST:\n",
