--- a/notebooks/federated-analytics-diabetes/do2.ipynb
+++ b/notebooks/federated-analytics-diabetes/do2.ipynb
@@ -4,8 +4,45 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Data Owner\n",
-    "\n",
+    "# Data Owner 02"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Install dependencies"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!uv pip install syft_flwr numpy pandas matplotlib seaborn --upgrade"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Change `LOCAL_TEST` to `True` if you want to run the clients locally to test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "LOCAL_TEST = True"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "## Upload Dataset"
    ]
@@ -36,10 +73,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "LOCAL_TEST = True\n",
     "DO_EMAIL = \"flower-test-group-2@openmined.org\"\n",
     "\n",
     "if LOCAL_TEST:\n",
+    "    print(\"LOCAL_TEST is True\")\n",
     "    from syft_rds.orchestra import setup_rds_server\n",
     "\n",
     "    do_stack = setup_rds_server(email=DO_EMAIL, root_dir=Path(\".\"), key=\"flwr\")\n",
