--- a/notebooks/federated-analytics-diabetes/ds.ipynb
+++ b/notebooks/federated-analytics-diabetes/ds.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Install dependencies"
+    "Install dependencies"
    ]
   },
   {
@@ -21,6 +21,22 @@
    "outputs": [],
    "source": [
     "!uv pip install syft_flwr numpy pandas matplotlib seaborn"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Change `LOCAL_TEST` to `True` if you want to run the clients locally to test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "LOCAL_TEST = True"
    ]
   },
   {
@@ -52,8 +68,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "LOCAL_TEST = True\n",
-    "\n",
     "if LOCAL_TEST:\n",
     "    from syft_rds.orchestra import setup_rds_server\n",
     "\n",
