--- a/notebooks/federated-analytics-diabetes/ds.ipynb
+++ b/notebooks/federated-analytics-diabetes/ds.ipynb
@@ -36,7 +36,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "LOCAL_TEST = True"
+    "LOCAL_TEST = False"
    ]
   },
   {
@@ -499,6 +499,20 @@
     "os.environ[\"SYFT_FLWR_MSG_TIMEOUT\"] = \"60\"\n",
     "\n",
     "!uv run {str(SYFT_FLWR_PROJECT_DIR / \"main.py\")} --active"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## DS Observes the Results"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now the DS can monitor the aggregated histograms from the DO's private datasets in the `figures` folder"
    ]
   },
   {
